--- a/download.html
+++ b/download.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-		<TITLE>Arowana 앱 다운로드</TITLE>
+		<TITLE>dalKomm Coffee APP Downalod</TITLE>
 		<style>
 		.navbar-text {
 		    position: absolute;
@@ -28,35 +28,21 @@
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
-		      <h3 class="navbar-text">Arowana 앱 설치</h3>
+		      <h3 class="navbar-text">dalKomm 앱 설치</h3>
 		    </div>
 		   </div>
 		</nav>
 			<div class="container">
 					<div class="">
                         <H4>개발기</H4>
-                        <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/3c5fivda3qgmlw9/manifest.plist">iOS</a>
                         <br>
-                        <p>iOS 자동로그인 테스트 버전 - 스플래시 API 조회 포함</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/rh319dupzwowr0s/manifest.plist">iOS</a>
-                        <hr> -->
-                        <!-- <H4>상용</H4> -->
-                        <!-- <p>Ver 1.0.4</p> -->
-                        <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/8zyj798mfo6rqbu/arowana_dev.apk">Android</a> -->
-						<!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/b5qz2byuvc90hlx/HC_PRIME_v1.00.04.apk">Android</a> -->
-                        <br>
-						<H4>Arownana Stage</H4>
+						<H4>시연용 - 목업</H4>
 						<p>Ver 1.0.0(Build.04)</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/echqconr75bql4h/manifest.plist">iOS - 2021/08/13 21:46</a>
-						<br>
+                        <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/echqconr75bql4h/manifest.plist">iOS - 2021/08/13 21:46</a>
+						<br> -->
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/1ldshe9mljk6iiz/HC_PRIME_STAGE.apk">Android</a>
 						<br>
                         <hr>
-						<!-- <H4>한컴페이 개발기</H4>
-						<p>Ver 1.0.0</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/8zyj798mfo6rqbu/arowana_dev.apk">Android</a>
-                        <br>
-                        <hr> -->
 
 						<p>* iOS 앱 설치시 유의사항</p>
 						<p>1. 위 설치파일은 등록된 UDID 의 기기에만 설치가 됩니다.</p>
