--- a/download.html
+++ b/download.html
@@ -34,10 +34,20 @@
 		</nav>
 			<div class="container">
 					<div class="">
-                        <H4>개발기</H4>
+                        <H4>Dev</H4>
+						<p>-</p>
                         <br>
+						<hr>
+						<H4>Stage</H4>
+						<p>-</p>
+                        <br>
+						<hr>
+						<H4>Live</H4>
+						<p>-</p>
+                        <br>
+						<hr>
 						<H4>시연용 - 목업</H4>
-						<p>Ver 1.0.0(Build.04)</p>
+						<p>Ver 1.0.0(Build 1.0.0)</p>
                         <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/echqconr75bql4h/manifest.plist">iOS - 2021/08/13 21:46</a>
 						<br> -->
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/1ldshe9mljk6iiz/HC_PRIME_STAGE.apk">Android</a>
