--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
 						<p>Ver 1.0.0(Build 1.0.0)</p>
                         <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/echqconr75bql4h/manifest.plist">iOS - 2021/08/13 21:46</a>
 						<br> -->
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/1ldshe9mljk6iiz/HC_PRIME_STAGE.apk">Android</a>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/2fh32qx96i3fpbp/DCA1.0.0_2108181629-DEBUG.apk">Android</a>
 						<br>
                         <hr>
 
