--- a/download.html
+++ b/download.html
@@ -35,7 +35,10 @@
 			<div class="container">
 					<div class="">
                         <H4>Dev</H4>
-						<p>-</p>
+						<p>dal.Komm iOS</p>
+						<p>Ver 3.0.0(Build 1)</p>
+						<p>배포일자: 2021/09/02(목) 11:22</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<hr>
 						<H4>Stage</H4>
