--- a/download.html
+++ b/download.html
@@ -40,6 +40,10 @@
 						<p>배포일자: 2021/09/02(목) 11:22</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
+						<p>dal.Komm Android</p>
+						<p>Ver 3.0.0(Build 1.0.0)</p>
+						<p>배포일자: 2021/09/02(목) 13:00</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ma0svs3gcjdc6y7/DCA1.0.0_2108181742-DEBUG_NOLOGIN.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
@@ -52,8 +56,6 @@
 						<H4>시연용 - 목업</H4>
 						<p>Ver 1.0.0(Build 1.0.0)</p>
 						<p>배포일자: 2021/08/18(수) 17:46</p>
-                        <!-- <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/echqconr75bql4h/manifest.plist">iOS - 2021/08/13 21:46</a>
-						<br> -->
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ma0svs3gcjdc6y7/DCA1.0.0_2108181742-DEBUG_NOLOGIN.apk">Android</a>
 						<br>
                         <hr>
