--- a/download.html
+++ b/download.html
@@ -37,12 +37,12 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/09/06(월) 18:50</p>
+						<p>배포일자: 2021/09/07(화) 13:12</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/09/07(월) 10:30</p>
+						<p>배포일자: 2021/09/07(화) 10:30</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/evc9srjmb7lduia/DKA3.0.0_2109070618-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
