--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/09/08(수) 14:23 (로그인 처리 오류 수정)</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/0055jdylnur7rel/DKA3.0.0_2109081414-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/09/08(수) 20:30 (auth 쿠키명 수정)</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/e86486g20a4vyso/DKA3.0.0_2109082000-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
