--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/09/08(수) 20:30 (auth 쿠키명 수정)</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/e86486g20a4vyso/DKA3.0.0_2109082000-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/09/09(목) 18:30 (웹뷰 성능 개선, JS I/F 연동 추가)</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ao31hc40kr3chwh/DKA3.0.0_2109091733-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
