--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/09/12(일) 22:43 (위치정보 쿠키 설정, 로그인 화면 뒤로가기 시 메인 페이지 이동)</p>
+						<p>배포일자: 2021/09/15(일) 16:14 (로그인 성공 후 이동 시 흰화면 현상 수정)</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
