--- a/download.html
+++ b/download.html
@@ -37,13 +37,13 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/09/15(일) 16:14 (로그인 성공 후 이동 시 흰화면 현상 수정)</p>
+						<p>배포일자: 2021/09/15(수) 19:20 (화면 밝기 스크립트 추가)</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/09/09(목) 18:30 (웹뷰 성능 개선, JS I/F 연동 추가)</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ao31hc40kr3chwh/DKA3.0.0_2109091733-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/09/15(수) 19:20 (위치정보 요청 스크립트 쿠키 연동)</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/pj7myuunu43m1gs/DKA3.0.0_2109151742-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
