--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/09/15(수) 19:20 (위치정보 요청 스크립트 쿠키 연동)</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/pj7myuunu43m1gs/DKA3.0.0_2109151742-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/09/17(금) 11:00 (로그인 뒤로가기 시 메인으로 강제 이동)</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/o97o5zoytzk5hne/DKA3.0.0_2109171045-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
