--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/09/16(목) 11:50 (결제관련 외부 스키마 추가)</p>
+						<p>배포일자: 2021/10/05(목) 15:20</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
