--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/10/08(목) 16:25</p>
+						<p>배포일자: 2021/10/08(금) 16:25</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
@@ -53,6 +53,14 @@
 						<p>-</p>
                         <br>
 						<hr>
+						
+						<H4>푸시 테스트</H4>
+						<p>Ver 3.0.0(Build 1)</p>
+						<p>배포일자: 2021/10/08(금) 16:50</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>
+						<br>
+                        <hr>
+
 						<H4>시연용 - 목업</H4>
 						<p>Ver 1.0.0(Build 1.0.0)</p>
 						<p>배포일자: 2021/08/18(수) 17:46</p>
