--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/10/05(목) 18:48</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ph8ymp2vb3suv6j/DKA3.0.0_2110051847-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/10/19(화) 20:48</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/7e87lzgjj5njakh/DKA3.0.0_2110192131-DEBUG_JS.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
@@ -59,6 +59,9 @@
 						<p>배포일자: 2021/10/19(화) 13:20</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>
 						<br>
+                        <p>Ver 3.0.0(Build 1.0.0)</p>
+                        <p>배포일자: 2021/10/19(화) 20:48</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/8797uk85cqvr200/DKA3.0.0_2110192132-DEBUG_PUSH.apk">Android</a>
                         <hr>
 
 						<H4>시연용 - 목업</H4>
