--- a/download.html
+++ b/download.html
@@ -42,7 +42,7 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/10/19(화) 20:48</p>
+						<p>배포일자: 2021/10/22(금) 10:48</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/s57yhf4u3oc8k2j/DKA3.0.0_2110201705-DEBUG_JS.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
