--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/10/25(월) 17:48</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/qxv98vcuw1l737o/DKA3.0.0_2110251746-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/10/26(화) 13:25</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ue1uoawg3pmy5fz/DKA3.0.0_2110261321-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
