--- a/download.html
+++ b/download.html
@@ -60,8 +60,8 @@
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>
 						<br>
                         <p>Ver 3.0.0(Build 1.0.0)</p>
-                        <p>배포일자: 2021/10/22(금) 10:48</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/jzar3yp0oix9ytu/DKA3.0.0_2110201704-DEBUG_PUSH.apk">Android</a>
+                        <p>배포일자: 2021/10/28(목) 13:14</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/q1c75xhckgnpp9n/DKA3.0.0_2110281134-DEBUG-PUSH.apk">Android</a>
                         <hr>
 
 						<H4>시연용 - 목업</H4>
