--- a/download.html
+++ b/download.html
@@ -37,13 +37,13 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/11/02(화) 13:50 - JS I/F 추가</p>
+						<p>배포일자: 2021/11/04(목) 14:24 - JS I/F 추가: fn_directCall</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/02(화) 13:50 - JS I/F 추가 및 이슈사항 수정(no 1, 2)</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/k7194ezgoy6js20/DKA3.0.0_2110301530-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/11/04(목) 14:24 - JS I/F 추가: fn_directCall 및 이슈사항 수정</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/kh95v01asf8zlc6/DKA3.0.0_2111041500-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
