--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/11/04(목) 14:24 - JS I/F 추가: fn_directCall</p>
+						<p>배포일자: 2021/11/08(월) 10:50 - 웹뷰 제스처 뒤로가기 disabled</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
