--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/04(목) 14:24 - JS I/F 추가: fn_directCall 및 이슈사항 수정</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/kh95v01asf8zlc6/DKA3.0.0_2111041500-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/11/12(금) 22:40</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ypoq2l04dxwyu24/DKA3.0.0_2111122235-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
