--- a/download.html
+++ b/download.html
@@ -37,13 +37,13 @@
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
 						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/11/12(금) 22:20</p>
+						<p>배포일자: 2021/11/16(화) 10:50 - 앱 아이콘 변경</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/16(화) 10:40</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/4hk0cfvz0dx9o8o/DKA3.0.0_2111160705-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/11/16(화) 10:50 - 앱 웹뷰 캐시, 앱 내부 캐시 미사용처리, 앱아이콘 변경</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ixxsx8a199qdb8f/DKA3.0.0_2111161055-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
