--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/16(화) 10:50 - 앱 웹뷰 캐시, 앱 내부 캐시 미사용처리, 앱아이콘 변경</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ixxsx8a199qdb8f/DKA3.0.0_2111161055-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/11/17(수) 13:30</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/3f0bak4oyq7g23w/DKA3.0.0_2111171316-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
