--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/17(수) 13:30</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/3f0bak4oyq7g23w/DKA3.0.0_2111171316-DEBUG.apk">Android</a>
+						<p>배포일자: 2021/11/17(수) 15:10</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ldamd4ll4qfgbbc/DKA3.0.0_2111171514-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
@@ -55,13 +55,14 @@
 						<hr>
 						
 						<H4>푸시 테스트</H4>
-						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/10/19(화) 13:20</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>
-						<br>
-                        <p>Ver 3.0.0(Build 1.0.0)</p>
-                        <p>배포일자: 2021/10/28(목) 13:14</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/q1c75xhckgnpp9n/DKA3.0.0_2110281134-DEBUG-PUSH.apk">Android</a>
+<!--						<p>Ver 3.0.0(Build 1)</p>-->
+<!--						<p>배포일자: 2021/10/19(화) 13:20</p>-->
+<!--						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>-->
+<!--						<br>-->
+<!--                        <p>Ver 3.0.0(Build 1.0.0)</p>-->
+<!--                        <p>배포일자: 2021/10/28(목) 13:14</p>-->
+<!--                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/q1c75xhckgnpp9n/DKA3.0.0_2110281134-DEBUG-PUSH.apk">Android</a>-->
+                        <br>
                         <hr>
 
 						<H4>시연용 - 목업</H4>
