--- a/download.html
+++ b/download.html
@@ -55,9 +55,9 @@
 						<hr>
 						
 						<H4>푸시 테스트</H4>
-<!--						<p>Ver 3.0.0(Build 1)</p>-->
-<!--						<p>배포일자: 2021/10/19(화) 13:20</p>-->
-<!--						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>-->
+						<p>Ver 3.0.0(Build 1)</p>
+						<p>배포일자: 2021/11/17(수) 20:30</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/7genc9uuckq5tqd/manifest.plist">iOS</a>
 <!--						<br>-->
 <!--                        <p>Ver 3.0.0(Build 1.0.0)</p>-->
 <!--                        <p>배포일자: 2021/10/28(목) 13:14</p>-->
