--- a/download.html
+++ b/download.html
@@ -42,7 +42,7 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/24(수) 17:47</p>
+						<p>배포일자: 2021/11/26(금) 15:00</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/bjngcksymnpmhpo/DKA3.0.0_2111261456-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
