--- a/download.html
+++ b/download.html
@@ -50,7 +50,10 @@
                         <br>
 						<hr>
 						<H4>Live</H4>
-						<p>-</p>
+                        <p>dal.Komm Android</p>
+                        <p>Ver 3.0.0(Build 1.0.0)</p>
+                        <p>배포일자: 2021/12/13(월) 20:45</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/xbxhfkqtmkoes1d/DKA3.0.0_2112132039-REL.apk">Android</a>
                         <br>
 						<hr>
 						
