--- a/download.html
+++ b/download.html
@@ -51,9 +51,10 @@
 						<hr>
 						<H4>Live</H4>
                         <p>dal.Komm Android</p>
-                        <p>Ver 3.0.0(Build 1.0.0)</p>
-                        <p>배포일자: 2021/12/13(월) 20:45</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/xbxhfkqtmkoes1d/DKA3.0.0_2112132039-REL.apk">Android</a>
+                        <p>Ver 3.0.1(Build 64)</p>
+                        <p>배포일자: 2021/12/16(목) 14:17</p>
+                        <p>수정사항: 로그아웃 후 재로그인 오류 수정, 비밀번호 입력 제한 해제, 개발 API URL 제거</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/vldf44ckbdiqwdb/DKA3.0.1%2864%29_2112161039-REL.apk">Android</a>
                         <br>
 						<hr>
 						
