--- a/download.html
+++ b/download.html
@@ -36,8 +36,8 @@
 					<div class="">
                         <H4>Dev</H4>
 						<p>dal.Komm iOS</p>
-						<p>Ver 3.0.0(Build 1)</p>
-						<p>배포일자: 2021/11/25(목) 12:07</p>
+						<p>Ver 3.0.1(Build 4)</p>
+						<p>배포일자: 2021/12/17(금) 14:20</p>
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
@@ -50,6 +50,11 @@
                         <br>
 						<hr>
 						<H4>Live</H4>
+                        <p>dal.Komm iOS</p>
+                        <p>Ver 3.0.1(Build 4)</p>
+                        <p>배포일자: 2021/12/17(금) 14:20</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/p41dw50pege7xmd/manifest.plist">iOS</a>
+                        <br>
                         <p>dal.Komm Android</p>
                         <p>Ver 3.0.1(Build 64)</p>
                         <p>배포일자: 2021/12/16(목) 14:17</p>
