--- a/download.html
+++ b/download.html
@@ -41,9 +41,9 @@
 						<a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/12jqhy39m2dw6fe/manifest.plist">iOS</a>
                         <br>
 						<p>dal.Komm Android</p>
-						<p>Ver 3.0.0(Build 1.0.0)</p>
-						<p>배포일자: 2021/11/26(금) 15:30</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/fy7h848pw5ap1p7/DKA3.0.0_2111261518-DEBUG.apk">Android</a>
+						<p>Ver 3.0.1(Build 64)</p>
+						<p>배포일자: 2021/12/17(금) 15:50</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/z9bhfr7tl7jju6v/DKA3.0.1_2112171437-DEBUG%28DEV%29.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
@@ -57,9 +57,8 @@
                         <br>
                         <p>dal.Komm Android</p>
                         <p>Ver 3.0.1(Build 64)</p>
-                        <p>배포일자: 2021/12/16(목) 14:17</p>
-                        <p>수정사항: 로그아웃 후 재로그인 오류 수정, 비밀번호 입력 제한 해제, 개발 API URL 제거</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/vldf44ckbdiqwdb/DKA3.0.1%2864%29_2112161039-REL.apk">Android</a>
+                        <p>배포일자: 2021/12/17(금) 15:50</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/3u83jip3q0knp8r/DKA3.0.1_2112171443-DEBUG%28REL%29.apk">Android</a>
                         <br>
 						<hr>
 						
