--- a/download.html
+++ b/download.html
@@ -42,8 +42,8 @@
                         <br>
 						<p>dal.Komm Android</p>
 						<p>Ver 3.0.1(Build 64)</p>
-						<p>배포일자: 2021/12/17(금) 15:50</p>
-						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/z9bhfr7tl7jju6v/DKA3.0.1_2112171437-DEBUG%28DEV%29.apk">Android</a>
+						<p>배포일자: 2022/01/18(화) 15:00</p>
+						<a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/ni41vrrt3nfvyew/DKA3.0.1_2201181401-DEBUG.apk">Android</a>
 						<hr>
 						<H4>Stage</H4>
 						<p>-</p>
