--- a/download.html
+++ b/download.html
@@ -52,13 +52,14 @@
 						<H4>Live</H4>
                         <p>dal.Komm iOS</p>
                         <p>Ver 3.0.1(Build 4)</p>
-                        <p>배포일자: 2021/12/17(금) 14:20</p>
+                        <p>배포일자: 2022/04/04(월) 14:00</p>
                         <a type="button" class="btn btn-primary btn-lg btn-block" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/p41dw50pege7xmd/manifest.plist">iOS</a>
                         <br>
                         <p>dal.Komm Android</p>
                         <p>Ver 3.0.1(Build 64)</p>
-                        <p>배포일자: 2021/12/17(금) 15:50</p>
-                        <a type="button" class="btn btn-primary btn-lg btn-block" href="https://dl.dropboxusercontent.com/s/3u83jip3q0knp8r/DKA3.0.1_2112171443-DEBUG%28REL%29.apk">Android</a>
+                        <p>배포일자: 2022/04/04(월) 14:00</p>
+                        <a type="button" class="btn btn-primary btn-lg btn-block"
+                            href="https://dl.dropboxusercontent.com/s/ddi8o82sygs4yyp/DKA3.0.2_2204041225-REL.apk">Android</a>
                         <br>
 						<hr>
 						
